--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,9 +38,17 @@ wrepper {
 }
 
 .tate {
+  width: 250px;
+  height: 230px;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   margin: 10px;
+}
+
+.col-lg-10 {
+  width: 100%;
+  height: 534px;
 }
 
 .hgiht {
@@ -54,4 +62,8 @@ wrepper {
 
 .b {
   margin: 15px 20px 0 20px;
+}
+
+.round {
+  border-radius: 50%;
 }
