--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -25,7 +25,7 @@
         </div>
         <div class="card-img-overlay d-flex">
           <p class="text-dark h4">
-            ようこそ、ながのCAKEへ！<br>
+            ようこそ、ながのケーキへ！<br>
             このサイトは、ケーキ販売のECサイトになります。<br>
             会員でない方も商品閲覧はできますが、<br>
             購入には会員登録が必要になります。<br>
@@ -38,6 +38,7 @@
           <% @items.each do |item| %>
             <div class="tate">
               <p>
+
                 <%= link_to item_path(item) do %>
                   <%= attachment_image_tag item, :image, :fill, 200, 100, format: 'jpeg', fallback: "no_image.png" %>
                 <% end %>
