--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,34 +1,41 @@
-<table>
-  <thead>
-    <tr>
-      <th>ジャンル検索</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @genres.each do |genre| %>
-      <tr>
-        <td>
-          <%= link_to genre.name, search_path('search[value]': genre.id , 'search[how]': "match", 'search[name]': genre.name) %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<!-- ジャンル検索機能は検索機能を作成する際に同時作成 qwertyシートに参考url有り -->
-<h1>商品一覧</h1>
-<table>
-  <tbody>
-    <% @items.each do |item| %>
-      <tr>
-        <td>
-          <%= link_to item_path(item) do %>
-            <%= attachment_image_tag item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png" %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-2 my-3">
+      <table class="table table-borderd">
+        <thead>
+          <tr>
+            <th>ジャンル検索</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @genres.each do |genre| %>
+            <tr>
+              <td>
+                <%= link_to genre.name, search_path('search[value]': genre.id, 'search[how]': "match", 'search[name]': genre.name ) %>
+              </td>
+            </tr>
           <% end %>
-        </td>
-        <td><%= item.name %></td>
-        <td>￥<%= item.add_tax_price.to_s(:delimited) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<%= paginate @items %>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-lg-10">
+      <h1>商品一覧</h1>
+      <div class="yoko">
+        <% @items.each do |item| %>
+          <div class="tate">
+            <p>
+              <%= link_to item_path(item) do %>
+                <%= attachment_image_tag item, :image, :fill, 250, 125, format: 'jpeg', fallback: "no_image.png" %>
+              <% end %>
+            </p>
+            <p><%= item.name %></p>
+            <p>￥<%= item.add_tax_price.to_s(:delimited) %></p>
+          </div>
+        <% end %>
+      </div>
+    <div class="center-block">
+      <%= paginate @items %>
+    </div>
+    </div>
+  </div>
+</div>
