--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,28 +1,47 @@
-<table>
-  <thead>
-    <tr>
-      <th>ジャンル検索</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @genres.each do |genre| %>
-      <tr>
-        <td>
-          <%= link_to genre.name, search_path('search[value]': genre.id, 'search[how]': "match", 'search[name]': genre.name) %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<!-- ジャンル検索機能は検索機能を作成する際に同時作成　qwertyシートに参考url有り -->
-<%= attachment_image_tag @item, :image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.png" %>
-<%= @item.name %>
-<%= @item.introduct %>
-<%= @item.add_tax_price.to_s(:delimited) %>（税込）
-<% if customer_signed_in? %>
-  <%= form_with local: true, model:@cart_item do |f| %>
-    <%= f.hidden_field :item_id, value: @item.id %>
-    <%= f.select :item_count, options_for_select((1..10).to_a, 1), include_blank: "個数選択" %>
-    <%= f.submit "カートに入れる" %>
-  <% end %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-2 my-5">
+      <table class="table table-borderd">
+        <thead>
+          <tr>
+            <th>ジャンル検索</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @genres.each do |genre| %>
+            <tr>
+              <td>
+                <%= link_to genre.name, search_path('search[value]': genre.id, 'search[how]': "match", 'search[name]': genre.name ) %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-lg-10 yoko">
+      <div class="m-5">
+        <%= attachment_image_tag @item, :image, :fill, 350, 200, format: 'jpeg', fallback: "no_image.png" %>
+      </div>
+      <div class="mt-5">
+        <p class="h2">
+          <%= @item.name %>
+        </p>
+        <p>
+          <%= @item.introduct %>
+        </p>
+        <p class="h3">
+          ￥<%= @item.add_tax_price.to_s(:delimited) %>（税込）
+        </p>
+        <p>
+          <% if customer_signed_in? %>
+            <%= form_with local: true, model:@cart_item do |f| %>
+              <%= f.hidden_field :item_id, value: @item.id %>
+              <%= f.select :item_count, options_for_select((1..10).to_a, 1), include_blank: "個数選択" %>
+              <%= f.submit "カートに入れる", class: "btn btn-success" %>
+            <% end %>
+          <% end %>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
